# openlibrary

./: README.md  pyproject.toml
openlibrary/: __init__.py  core.py
